--- a/Shop.html
+++ b/Shop.html
@@ -268,7 +268,7 @@
         <!-- Product 1 -->
         <div class="product-card">
             <div class="product-image">
-                <img src="OIP (1).jpg" alt="Nail Care Kit">
+                <img src="images/OIP (1).jpg" alt="Nail Care Kit">
             </div>
             <div class="product-info">
                 <span class="product-category">Care Products</span>
@@ -283,7 +283,7 @@
         <div class="product-card">
             <div class="sale-badge">Bestseller</div>
             <div class="product-image">
-                <img src="OIP(2).jpg" alt="Nail Art Brushes">
+                <img src=" images/OIP(2).jpg" alt="Nail Art Brushes">
             </div>
             <div class="product-info">
                 <span class="product-category">Tools</span>
@@ -297,7 +297,7 @@
         <!-- Product 3 -->
         <div class="product-card">
             <div class="product-image">
-                <img src="OIP(3).jpg" alt="LED Nail Lamp">
+                <img src="images/OIP(3).jpg" alt="LED Nail Lamp">
             </div>
             <div class="product-info">
                 <span class="product-category">Equipment</span>
@@ -311,7 +311,7 @@
         <!-- Product 4 -->
         <div class="product-card">
             <div class="product-image">
-                <img src="OIP(4).jpg" alt="Nail Stickers">
+                <img src="images/OIP(4).jpg" alt="Nail Stickers">
             </div>
             <div class="product-info">
                 <span class="product-category">Accessories</span>
