--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="container py-3">
         <div class="row align-items-center">
             <div class="col-md-4">
-                <div class="logo">
+                <div>
                     <a href="index.html" class="text-decoration-none">
                         <h1 class="mb-0">LUXE<span class="text-primary">NAILS</span></h1>
                     </a>
@@ -61,7 +61,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="card product-card h-100">
                         <span class="badge bg-success position-absolute top-0 start-0 m-2">NEW</span>
-                        <img src="nail uv.jpeg" class="card-img-top" alt="LUXE Gel Polish Set - 6 Colors">
+                        <img src="images/nail_uv.jpeg" class="card-img-top" alt="LUXE Gel Polish Set - 6 Colors">
                         <div class="card-body">
                             <h3 class="card-title">Gel Polish Starter Kit</h3>
                             <p class="price text-primary">P80.00</p>
@@ -73,7 +73,7 @@
                 <!-- Product 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card product-card h-100">
-                        <img src="french tips pressons.jpg" class="card-img-top" alt="French Tip Press-On Nails">
+                        <img src="images/french_tips_pressons.jpg" class="card-img-top" alt="French Tip Press-On Nails">
                         <div class="card-body">
                             <h3 class="card-title">French Tip Press-Ons</h3>
                             <p class="price text-primary">P59.99</p>
@@ -85,7 +85,7 @@
                 <!-- Product 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card product-card h-100">
-                        <img src="nails beauty.jpg" class="card-img-top" alt="Complete Nail Art Kit">
+                        <img src="images/nails_beauty.jpg" class="card-img-top" alt="Complete Nail Art Kit">
                         <div class="card-body">
                             <h3 class="card-title">Nail Art Master Kit</h3>
                             <p class="price text-primary">P149.99</p>
