--- a/login.html
+++ b/login.html
@@ -296,6 +296,7 @@
         <a href="contact.html">Contact</a>
         <a href="login.html">Login</a>
         <a href="forgot password.html">Forgot password</a>
+        <a href="Shop.html">Shop</a>
     </nav>
     
     <main class="login-container">
